--- a/assets/styles/error.scss
+++ b/assets/styles/error.scss
@@ -1,4 +1,4 @@
-.error_title {
+.error-title {
     margin-top: 300px !important;
     // margin-bottom: 300px !important;
     width: 100vw !important;
@@ -6,7 +6,7 @@
 }
 
 @media (max-width: 1200px) { 
-    .error_title {
+    .error-title {
         margin-top: 500px !important;
         margin-bottom: 0!important;
         margin-left: 0!important;
