--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,11 +1,11 @@
 @import "~bootstrap/scss/bootstrap";
-@import "assets/styles/_login.scss";
-@import "assets/styles/_home.scss";
-@import "assets/styles/_header.scss";
-@import "assets/styles/_footer.scss";
-@import "assets/styles/_!home.scss";
-@import "assets/styles/_forms.scss";
-@import "assets/styles/_error.scss";
+@import "assets/styles/login.scss";
+@import "assets/styles/home.scss";
+@import "assets/styles/header.scss";
+@import "assets/styles/footer.scss";
+@import "assets/styles/!home.scss";
+@import "assets/styles/forms.scss";
+@import "assets/styles/error.scss";
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
@@ -97,7 +97,7 @@
       transform: translateY(0);
     }
   }
-  
+
   .fade-in-up {
     opacity: 0;
     transform: translateY(-2000px);
