--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>{% block title %}Ambulance La Clynysoise{% endblock %}</title>
-        <link rel="icon" type="image/svg" href="{{ asset('favicon.svg') }}"/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>{% block title %}Ambulance La Clynysoise{% endblock %}</title>
+    <link rel="icon" type="image/svg" href="{{ asset('favicon.svg') }}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}            
-            
-        {% endblock %}
-    </head>
+    {% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+    {% endblock %}
 
-    <body>
-        {{ include("header.html.twig") }}
-        {% block body %}
+    {% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
 
-        {% endblock %}
-        {{ include("footer.html.twig") }}
-    </body>
+    {% endblock %}
+</head>
+
+<body>
+    {{ include("_header.html.twig") }}
+    {% block body %}
+
+    {% endblock %}
+    {{ include("_footer.html.twig") }}
+</body>
+
 </html>
