--- a/templates/main/appointment.html.twig
+++ b/templates/main/appointment.html.twig
@@ -1,42 +1,42 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<section class="pages_section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
-    <h1 class="titles_top fst-italic fw-bolder text-center">Vos rendez-vous</h1>
+<section class="pages-section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
+    <h1 class="titles-top fst-italic fw-bolder text-center">Vos rendez-vous</h1>
     <div class="container container-fluid pb-5">
         <div class="row content fade-in-up">
 
-            <div class="col-lg-12 sub_content">
+            <div class="col-lg-12 sub-content">
 
                 {% for flashMessage in app.flashes('danger') %}
-                    <div class="alert alert-danger m-5">
-                        {{ flashMessage }}
-                    </div>
+                <div class="alert alert-danger m-5">
+                    {{ flashMessage }}
+                </div>
                 {% endfor %}
 
                 {% for flashMessage in app.flashes('success') %}
-                    <div class="alert alert-success m-5">{{ flashMessage }}</div>
+                <div class="alert alert-success m-5">{{ flashMessage }}</div>
                 {% endfor %}
 
                 {% for flashMessage in app.flashes('info') %}
-                    <div class="alert alert-primary">
-                        {{ flashMessage }}
-                    </div>
+                <div class="alert alert-primary">
+                    {{ flashMessage }}
+                </div>
                 {% endfor %}
 
                 {% for flashMessage in app.flashes('error') %}
-                    <div class="alert alert-danger m-5">{{ flashMessage }}</div>
+                <div class="alert alert-danger m-5">{{ flashMessage }}</div>
                 {% endfor %}
 
                 {{ form_start(formulaire) }}
                 <div class="identity">
-                    <h2 class="text-center sub_titles"> Informations Personnelles </h2>
+                    <h2 class="text-center sub-titles"> Informations Personnelles </h2>
                     <div class="row">
                         <div class="col-lg-2 pe-3">{{ form_row(formulaire.Civilite) }}</div>
                         <div class="col-lg-4 pe-3 ps-3">{{ form_row(formulaire.Nom) }}</div>
                         <div class="col-lg-4 pe-3 ps-3">{{ form_row(formulaire.Prenom) }}</div>
                     </div>
 
-                    <div class="row">    
+                    <div class="row">
                         <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.Telephone) }}</div>
                         <div class="col-lg-6 pe-3 ps-3">{{ form_row(formulaire.email) }}</div>
                     </div>
@@ -51,9 +51,12 @@
                 <div class="details mb-5 pt-5">
                     <h2 class="text-center pb-3"> Détails du Rendez-Vous </h2>
                     <div class="row">
-                        <div class="col-lg-4 pe-3 ps-3 pb-2"><label class="fs-4">Date du rendez-vous *</label>{{ form_row(formulaire.DateRendezVous) }}</div>
-                        <div class="col-lg-4 pe-3 ps-3"><label class="fs-4">Heure du rendez-vous *</label>{{ form_row(formulaire.HeureRendezVous) }}</div>
-                        <div class="col-lg-4 pe-3 ps-3"><label class="fs-4">Durée estimée</label>{{ form_row(formulaire.DureeEstimee) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3 pb-2"><label class="fs-4">Date du rendez-vous *</label>{{
+                            form_row(formulaire.DateRendezVous) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3"><label class="fs-4">Heure du rendez-vous *</label>{{
+                            form_row(formulaire.HeureRendezVous) }}</div>
+                        <div class="col-lg-4 pe-3 ps-3"><label class="fs-4">Durée estimée</label>{{
+                            form_row(formulaire.DureeEstimee) }}</div>
                     </div>
 
                     <div class="row">
