--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -1,18 +1,35 @@
 {% extends 'base.html.twig' %}
+
 {% block body %}
-<section class="pages_section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
-    <h1 class="titles_top fst-italic fw-bolder text-center">Contact</h1>
+
+<section class="pages-section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
+    <h1 class="titles-top fst-italic fw-bolder text-center">Contact</h1>
+
+    {# Conteneur principal pour le contenu de la page #}
     <div class="container-fluid pt-5 pb-5">
         <div class="row content fade-in-up">
-            <div class="col-lg-6 mt-5 sub_content text-center">
-                <h2></h2>
-                <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 03 85 59 04 87</a><br>
-                <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 06 77 65 87 74</a><br>
-                <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-5 pb-4 d-inline-block">7 Av. Pierre le Vénérable, 71250 Cluny</a>
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110047!2d4.652024377010696!3d46.43803726793772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1689871120391!5m2!1sfr!2sfr" width="700" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            {# Colonne de gauche avec les informations de contact et la carte Google Maps #}
+            <div class="col-lg-6 mt-5 sub-content text-center">
+                <h2></h2>
+                <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 03 85 59
+                    04 87</a><br>
+                <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 06 77 65
+                    87 74</a><br>
+                <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny"
+                    class="nav-link p-0 text-body-secondary mt-5 pb-4 d-inline-block">7 Av. Pierre le Vénérable, 71250
+                    Cluny</a>
+
+                {# Intégration de la carte Google Maps #}
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110047!2d4.652024377010696!3d46.43803726793772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1689871120391!5m2!1sfr!2sfr"
+                    width="700" height="450" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="col-lg-6 mt-5 sub_content">
+
+            {# Colonne de droite avec le formulaire de contact #}
+            <div class="col-lg-6 mt-5 sub-content">
+                {# Début du formulaire #}
                 {{ form_start(formulaire) }}
                 <div>
                     <div class="row">
@@ -31,12 +48,14 @@
                 </div>
                 <div class="col-lg-12 ps-3 pe-3">
                     {{ form_row(formulaire.content) }}
-                </div>      
+                </div>
                 <div class="col-lg-12 ps-3 pe-3">
                     {{ form_row(formulaire.envoyer) }}
                 </div>
+                {# Fin du formulaire #}
                 {{ form_end(formulaire) }}
 
+                {# Affichage des messages flash de succès #}
                 {% for flashMessage in app.flashes('success') %}
                 <div class="alert alert-success m-5">
                     {{ flashMessage }}
@@ -54,4 +73,4 @@
 </section>
 
 
-{% endblock %} 
+{% endblock %}
