--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -1,84 +1,88 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<section class="pages_section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
-    <h1 class="titles_top fst-italic fw-bolder text-center">Nous rejoindre</h1>
-{% set counter = 0 %}
-{% for posts in post %}
+<section class="pages-section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
+    <h1 class="titles-top fst-italic fw-bolder text-center">Nous rejoindre</h1>
+    {% set counter = 0 %}
+    {% for posts in post %}
     {% if counter is divisible by(2) %}
-        <div class="container-fluid pt-5 pb-5">
-            <div class="row content fade-in-up" id="join_post">
-                <div class="col-lg-12 sub_content">
-                    <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
-                    {% if posts.mediaUrl is not null %}
-                    <img class="img-fluid rounded-5 img_left" src="upload/images/{{ asset(posts.mediaUrl) }}">
-                    {% endif %}
-                    <p>{{ posts.content|raw }}</p>
-                </div>
+    <div class="container-fluid pt-5 pb-5">
+        <div class="row content fade-in-up" id="join_post">
+            <div class="col-lg-12 sub-content">
+                <h1 class="pb-5 text-center">{{ posts.title }}</h1>
+                {% if posts.mediaUrl is not null %}
+                <img class="img-fluid rounded-5 img-left" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                {% endif %}
+                <p>{{ posts.content|raw }}</p>
             </div>
         </div>
-        {% else %}
-        <div class="container-fluid pt-5 pb-5">
-            <div class="row content">
-                <div class="col-lg-12 sub_content">
-                    <h1 class="pb-5 text-center">{{ posts.title }}</h1> 
-                    {% if posts.mediaUrl is not null %}
-                    <img class="img-fluid rounded-5 img_right" src="upload/images/{{ asset(posts.mediaUrl) }}">
-                    {% endif %}
-                    <p>{{ posts.content|raw }}</p>
-                </div>
+    </div>
+    {% else %}
+    <div class="container-fluid pt-5 pb-5">
+        <div class="row content">
+            <div class="col-lg-12 sub-content">
+                <h1 class="pb-5 text-center">{{ posts.title }}</h1>
+                {% if posts.mediaUrl is not null %}
+                <img class="img-fluid rounded-5 img-right" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                {% endif %}
+                <p>{{ posts.content|raw }}</p>
             </div>
         </div>
+    </div>
     {% endif %}
     {% set counter = counter + 1 %}
 
     <div class="container-fluid pt-5 pb-5">
         <div class="row content fade-in-up" id="join_form">
-            <div class="col-lg-6 mt-5 sub_content text-center">
-                <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 03 85 59 04 87</a><br>
-                <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 06 77 65 87 74</a><br>
-                <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">7 Av. Pierre le Vénérable, 71250 Cluny</a>
+            <div class="col-lg-6 mt-5 sub-content text-center">
+                <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 03 85 59
+                    04 87</a><br>
+                <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tél : 06 77 65
+                    87 74</a><br>
+                <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny"
+                    class="nav-link p-0 text-body-secondary mt-5 d-inline-block">7 Av. Pierre le Vénérable, 71250
+                    Cluny</a>
             </div>
 
-            <div class="col-lg-6 mt-5 sub_content">
+            <div class="col-lg-6 mt-5 sub-content">
                 <h2 class="text-center">Formulaire de recrutement</h2>
                 {{ form_start(formulaire) }}
-                    <div>
-                        <div class="row">
-                            <div class="col-lg-2 ps-3 pe-3">{{ form_row(formulaire.Civilite) }}</div>
-                            <div class="col-lg-5 ps-3 pe-3">{{ form_row(formulaire.Nom) }}</div>
-                            <div class="col-lg-5 ps-3 pe-3">{{ form_row(formulaire.Prenom) }}</div>
-                        </div>
-                        <div class="row">    
-                            <div class="col-lg-6 ps-3 pe-3">{{ form_row(formulaire.Telephone) }}</div>
-                            <div class="col-lg-6 ps-3 pe-3">{{ form_row(formulaire.email) }}</div>
-                        </div>
+                <div>
+                    <div class="row">
+                        <div class="col-lg-2 ps-3 pe-3">{{ form_row(formulaire.Civilite) }}</div>
+                        <div class="col-lg-5 ps-3 pe-3">{{ form_row(formulaire.Nom) }}</div>
+                        <div class="col-lg-5 ps-3 pe-3">{{ form_row(formulaire.Prenom) }}</div>
                     </div>
-                    <div class="ps-3 pe-3">{{ form_row(formulaire.content) }}</div>
-                    
-                    <div class="row form-group pt-3">
-                        <div class="col-lg-12 pe-3 ps-3">
-                            <label>Téléchargez votre C.V ci-dessous</label>
+                    <div class="row">
+                        <div class="col-lg-6 ps-3 pe-3">{{ form_row(formulaire.Telephone) }}</div>
+                        <div class="col-lg-6 ps-3 pe-3">{{ form_row(formulaire.email) }}</div>
+                    </div>
+                </div>
+                <div class="ps-3 pe-3">{{ form_row(formulaire.content) }}</div>
+
+                <div class="row form-group pt-3">
+                    <div class="col-lg-12 pe-3 ps-3">
+                        <label>Téléchargez votre C.V ci-dessous</label>
                         {{ form_row(formulaire.Fichier) }}
-                        </div>
                     </div>
-                    <div class="col-lg-12 ps-3 pe-3">
-                        {{ form_row(formulaire.envoyer) }}
-                    </div>
+                </div>
+                <div class="col-lg-12 ps-3 pe-3">
+                    {{ form_row(formulaire.envoyer) }}
+                </div>
                 {{ form_end(formulaire) }}
                 {% for flashMessage in app.flashes('success') %}
-                    <div class="alert alert-success m-5">
-                        {{ flashMessage }}
-                    </div>
+                <div class="alert alert-success m-5">
+                    {{ flashMessage }}
+                </div>
                 {% endfor %}
 
                 {% for flashMessage in app.flashes('danger') %}
-                    <div class="alert alert-danger m-5">
-                        {{ flashMessage }}
-                    </div>
+                <div class="alert alert-danger m-5">
+                    {{ flashMessage }}
+                </div>
                 {% endfor %}
             </div>
         </div>
     </div>
-{% endfor %}
+    {% endfor %}
 </section>
 {% endblock %}
