--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,15 +1,15 @@
 {% block footer %}
 
-<div class="container" id="footerAll">
+<div class="container" id="footer-all">
     <footer class="row py-5 my-5 border-top justify-content-center" id="footer">
 
-        <div class="col-lg-4 mb-3 pCol">
+        <div class="col-lg-4 mb-3 p-col">
             <a href="/"><img id="logo" src="{{ asset('footerLogo.png') }}"></a><br>
             <p class="text-body-secondary">Tout droits réservés &copy; 2023</p>
         </div>
 
 
-        <div class="col-lg-4 mb-3 pCol">
+        <div class="col-lg-4 mb-3 p-col">
             <h5>Coordonnées</h5>
             <hr class="border border-white opacity-100 border-1">
             <ul class="nav flex-column">
@@ -20,7 +20,7 @@
             </ul>
         </div>
 
-        <div class="col-lg-4 mb-3 pCol">
+        <div class="col-lg-4 mb-3 p-col">
             <h5>Informations</h5>
             <hr class="border border-white opacity-100 border-1">
             <ul class="nav flex-column">
