--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -16,7 +16,7 @@
     font-size: 3rem !important;
 }
 
-#text_carousel {
+#text-carousel {
     position: absolute;
     z-index: 1000;
     top: 50%;
@@ -41,11 +41,11 @@
     font-size: 2rem;
 }
 
-.box_one, .box_two {
+.box-one, .box-two {
   transition: transform 0.2s ease-in-out;
 }
 
-.box_one:hover, .box_two:hover {
+.box-one:hover, .box-two:hover {
   transform: scale(1.05);
 }
 
@@ -53,26 +53,26 @@
     margin-top: 50px!important;
 }
 
-#home_description {
+#home-description {
     width: 50%!important;
     height: 100%!important;
 }
 
-#title_desc {
+#title-desc {
     height: 85vh!important;
 }
 
-#buttons_container {
+#buttons-container {
     height: 15vh!important;
     width: 100%;
 }
 
-#buttons_container button {
+#buttons-container button {
     width: 33.33% !important;
     height: auto !important;
 }
 
-#buttons_container button a{
+#buttons-container button a{
     width: 100% !important;
     height: 100% !important;
     
@@ -83,8 +83,8 @@
     height: 85vh!important
 }
 
-#buttons_container button:hover, 
-#buttons_container button:focus {
+#buttons-container button:hover, 
+#buttons-container button:focus {
     background-color: #5C84B7!important;
 }
 
@@ -92,8 +92,7 @@
     --bs-btn-border-radius: 10px 10px 10px 10px!important;
     --bs-btn-border-color: white!important;
 }
-
-.box_one {
+.box-one {
     width: 800px!important;
     height: 400px!important;
     overflow: hidden;
@@ -102,7 +101,7 @@
     position: relative;
 }
 
-.box_two {
+.box-two {
     width: 350px!important;
     height: 400px!important;
     overflow: hidden;
@@ -111,14 +110,14 @@
     position: relative;
 }
 
-.box_one svg{
+.box-one svg{
     position: absolute; 
     top: 100%; 
     transform: translateY(-125%); 
     left: 90%;
 }
 
-.box_two svg{
+.box-two svg{
     position: absolute; 
     top: 100%; 
     transform: translateY(-125%); 
@@ -144,13 +143,13 @@ main {
     background-attachment: fixed;
 }
 
-.grid_gallery img {
+.grid-gallery img {
     max-width: 300px;
     max-height: 330px;
     margin: 10px;   
 }
 
-.grid_gallery p {
+.grid-gallery p {
     width: auto !important;
     font-size: 1.2rem;
     font-weight: bold;
@@ -173,7 +172,7 @@ main {
     --bs-gutter-x: 0rem;
 }
 
-#mobile_iframe {
+#mobile-iframe {
     display: none;
 }
 
@@ -182,13 +181,13 @@ main {
     height: 100%;
 }
 
-#desktop_iframe {
+#desktop-iframe {
     width: 90%;
     margin-bottom: 50px !important;
 }
 
 @media (max-width: 1200px) { 
-    #home_description {
+    #home-description {
         width: 100vw !important;
         height: 100vh !important;
         position: relative;
@@ -198,11 +197,11 @@ main {
         display: none !important;
     }
 
-    #text_carousel {
+    #text-carousel {
         display: none;
     }
 
-    #buttons_container button {
+    #buttons-container button {
         width: 100% !important;
     }
 
@@ -210,16 +209,16 @@ main {
         font-size: 3rem !important;
     }
 
-    .grid_gallery {
+    .grid-gallery {
         background-size: auto;
     }
 
-    .box_two, .bow_one {
+    .box-two, .bow_one {
         width: 800px!important;
         height: 400px!important;
     }
 
-    .box_two svg, .box_one svg{
+    .box-two svg, .box-one svg{
         left: 85%;
     }
 
@@ -232,11 +231,11 @@ main {
         --bs-btn-border-color: white!important;
     }
 
-    #desktop_iframe {
+    #desktop-iframe {
         display: none;
     }
 
-    #mobile_iframe {
+    #mobile-iframe {
         display: initial;
     }
 
