--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -3,14 +3,14 @@
 
 {% block body %}
 
-<section class="pages_section" style="background-image: url('{{ asset('croixGrey.png') }}');">
-    <h1 class="titles_top fst-italic fw-bolder text-center">Nos actualités</h1>
+<section class="pages-section" style="background-image: url('{{ asset('croixGrey.png') }}');">
+    <h1 class="titles-top fst-italic fw-bolder text-center">Nos actualités</h1>
     <div class="container-fluid pt-5 pb-5">
         <div class="row content">
-            <div class="col-lg-12 sub_content">
+            <div class="col-lg-12 sub-content">
                 <h1 class="pb-5 text-center">{{ post.title }}</h1> 
                 {% if post.mediaUrl %}
-                <img class="img-fluid rounded-5 img_left fade-in-left" id="show_img" src="{{ asset('upload/images/' ~ post.mediaUrl) }}">
+                <img class="img-fluid rounded-5 img-left fade-in-left" id="show_img" src="{{ asset('upload/images/' ~ post.mediaUrl) }}">
                 {% endif %}
                 <div class="fade-in-right" id="show_content">{{ post.content|raw }}</div>
             </div>
