Squashed commit of the following:
commit 46ff5694cd11d61b0bd5393e4d53247f322614e3
Author: Nicolas Gonot <gg_nicolas@hotmail.com>
Date:   Tue Jul 18 11:51:17 2023 +0200

    repare bug

commit 3dd36dcb0d64a8f66dda8483936aea5cb567ebc3
Author: BussinMF <133649620+BussinMF@users.noreply.github.com>
Date:   Mon Jul 17 17:08:00 2023 +0200

    Update

commit 8bfda8ce649d728eed815bd55fc5773446d3ff7a
Author: BussinMF <133649620+BussinMF@users.noreply.github.com>
Date:   Mon Jul 17 15:59:53 2023 +0200

    Front update

commit 9901fe675e14c6123750faaa39e51b9a5e9ad755
Author: BussinMF <133649620+BussinMF@users.noreply.github.com>
Date:   Mon Jul 17 15:16:00 2023 +0200

    Mid Update Front

commit 48d915edbba1f9ccca408996bed7b0476a484ea9
Author: BussinMF <133649620+BussinMF@users.noreply.github.com>
Date:   Mon Jul 17 13:20:14 2023 +0200

    Nav Fix

commit ab3558e1138da8909b7f62b80febaa1c37dc3de2
Author: BussinMF <133649620+BussinMF@users.noreply.github.com>
Date:   Mon Jul 17 13:08:05 2023 +0200

    Small Front Update / Test

--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -19,23 +19,23 @@
      max-width: 100vw !important
    }
 
-.pCol {
+.p-col {
     text-align: center !important;
     width: fit-content;
     padding: 0 100px !important;
 }
 
-.pCol h5 {
+.p-col h5 {
     font-size: 1.4rem!important;
 }
 
-.pCol p, .pCol p a, .pCol ul li, .pCol ul li a {
+.p-col p, .p-col p a, .p-col ul li, .p-col ul li a {
     color: white!important;
     display: inline;
 }
 
-.pCol ul li, .pCol ul li a:hover,
-.pCol ul li, .pCol ul li a:focus {
+.p-col ul li, .p-col ul li a:hover,
+.p-col ul li, .p-col ul li a:focus {
     color: #b0b8bf!important;
 }
 
@@ -46,12 +46,12 @@
     }
     
 
-    .pCol {
+    .p-col {
         margin-right: 50px !important;
         margin-left: 50px!important;
     }
 
-    .pCol h5 {
+    .p-col h5 {
         font-size: 2.5rem!important;
         padding-top: 15px;
         padding-bottom: 30px;
