--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -2,7 +2,7 @@
 
 <div class="container" id="footerAll">
     <footer class="row py-5 my-5 border-top justify-content-center" id="footer">
-        <div class="col-lg-4 mb-3 pCol">
+        <div class="col-lg-4 mb-3 p-col">
             <img id="logo" class="pb-3" src="{{ asset('footerLogo.png') }}">
             <br>
             <p class="nav-item mb-2"><a target="_blank"
@@ -11,7 +11,7 @@
             <p class="text-body-secondary">&copy; 2023</p>
         </div>
 
-        <div class="col-lg-4 mb-3 pCol">
+        <div class="col-lg-4 mb-3 p-col">
             <h5>Coordonnées</h5>
             <hr class="border border-white opacity-100 border-1">
             <ul class="nav flex-column">
@@ -24,7 +24,7 @@
             </ul>
         </div>
 
-        <div class="col-lg-4 mb-3 pCol">
+        <div class="col-lg-4 mb-3 p-col">
             <h5>Informations</h5>
             <hr class="border border-white opacity-100 border-1">
             <ul class="nav flex-column">
