--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -37,7 +37,7 @@
             <a class="nav-link text-white" href="/prise-en-charge">Prise en charge - Tarification</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="/nous-rejoindre">Nous rejoindre</a>
+            <a class="nav-link text-white" href="/nous-rejoindre">Offres d'emploi - Nous rejoindre</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="/vos-rendez-vous">Vos rendez-vous</a>
