--- a/templates/main/supportPricing.html.twig
+++ b/templates/main/supportPricing.html.twig
@@ -1,15 +1,18 @@
 {% extends 'base.html.twig' %}
+
 {% block body %}
 {% set counter = 0 %}
+
 {% for posts in post %}
 {% if counter is divisible by(2) %}
-<div class="pages-section" style="background-image: url('{{ asset("background.png") }}'); background-size: cover;">
+<div class="pages-section" style="background-image: url('{{ asset(" background.png") }}'); background-size: cover;">
     <h1 class="titles-top fst-italic fw-bolder text-center">Prise en charge - Tarification</h1>
     <div class="container-fluid pt-5 pb-5">
         <div class="row content">
             <div class="col-lg-12 sub-content">
                 <h1 class="pb-5 text-center fade-in-up" id="support_title">{{ posts.title }}</h1>
                 {% if posts.mediaUrl is not null %}
+                {# Vérification de l'existence de l'URL du média et affichage de l'image #}
                 <img class="img-fluid rounded-5 img-left fade-in-left" id="support_img"
                     src="upload/images/{{ asset(posts.mediaUrl) }}">
                 {% endif %}
@@ -23,6 +26,7 @@
     <div class="row content">
         <div class="col-lg-12 sub-content">
             <h1 class="pb-5 text-center">{{ posts.title }}</h1>
+            {# Vérification de l'existence de l'URL du média et affichage de l'image #}
             {% if posts.mediaUrl is not null %}
             <img class="img-fluid rounded-5 img-right" src="upload/images/{{ asset(posts.mediaUrl) }}">
             {% endif %}
@@ -32,4 +36,5 @@
 </div>
 {% endif %}
 {% endfor %}
+
 {% endblock %}
