--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -1,6 +1,5 @@
 {% extends 'base.html.twig' %}
 
-
 {% block body %}
 <section class="pages-section" style="background-image: url('{{ asset('background.png') }}'); background-size: cover;">
     <h1 class="titles-top fst-italic fw-bolder text-center">Nos actualités</h1>
@@ -8,10 +7,15 @@
         <div class="row content">
             <div class="col-lg-12 sub-content">
                 <h1 class="pb-5 text-center">{{ post.title }}</h1>
+                
+                {# Vérifie s'il y a une URL de média associée à l'article #}
                 {% if post.mediaUrl %}
+                {# Affiche une image associée à l'article #}
                 <img class="img-fluid rounded-5 img-left fade-in-left" id="show_img"
                     src="{{ asset('upload/images/' ~ post.mediaUrl) }}">
                 {% endif %}
+                
+                {# Affiche le contenu de l'article (en considérant qu'il peut contenir du HTML brut) #}
                 <div class="fade-in-right" id="show_content">{{ post.content|raw }}</div>
             </div>
         </div>
